# Mnemos

./: .distill-completion-todo.md  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPS.md  OPS_MANUAL.md  README-en.md  README.md  __init__.py  auto_setup.py  blindspot_discovery.py  config.py  context_search.py  deferred_distill.py  hephaestus_worker.py  mark_truncated.py  mnemos_cli.py  mnemos_daemon.py  pyproject.toml  requirements.txt  run_tests.py  setup.bat  setup.sh  siliconflow_client.py  test_embedding_client.py  test_mark_truncated.py  verify_installation.py
.github/workflows/: ci.yml
analysis/: frontmatter_contract_note.md  modules_deep_analysis.md
config/: .env.example  config.example.json  config.example.yaml  scorer.yaml
core/: __init__.py  agent_distill_adapter.py  agent_path_watcher.py  ai_context_reader.py  ai_memory_sync.py  auxiliary_client.py  config.py  content_formatter.py  context_assembler.py  credential_pool.py  db_init.py  db_utils.py  deferred_queue.py  diagnostics.py  file_watcher.py  frontmatter.py  heartbeat.py  helios.py  hephaestus_worker.py  host_agent_caller.py  job_scheduler.py  llm_config.py  llm_helper.py  mnemos_bus.py  orchestrator.py  outcome_collector.py  pluggable.py  pre_flight_injector.py  prometheus_fire.py  prompt_builder.py  prompt_call_log.py  quality_filter.py  run_distill_from_memos.py  scheduler_config.py  task_id_parser.py  uncertainty_aware_decision.py  weight_adapter.py  wiki_metrics.py
core/app/: __init__.py  application_hub.py  avoidance_detector.py  blindspot_discovery.py  context_search.py  cross_agent_divergence_detector.py  dispute_resolver.py  forced_retrospective.py  freshness_alert.py  intent_router.py  knowledge_freshness_checker.py  obsidian_opener.py  predictive_push.py  question_answer_search.py  weekly_report.py
core/embeddings/: __init__.py  cache.py  dual_index.py  index_manager.py  rate_limiter.py  relation_manager.py  siliconflow_client.py
core/hephaestus/: __init__.py  deferred_distill.py  distill_self_check.py  distillation_engine.py  distillation_prompts.py  document_pipeline.py  document_processor.py  (+5 more)
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  OPS_MANUAL.md
integrations/: active.py  active_bridge.py  agora.py  ai_context_reader.py  apollon.py  caduceus.py  claude_integration.py  claude_live_sync.py  daedalus.py  kimi_adapter.py  kimi_live_sync.py  mcp_server.py  memos_mcp_server.py  memos_mcp_server_sdk.py  memos_sdk.py  memos_sync.py  musae.py  olympus.py  oracle.py  styx.py  typhon.py  wiki_reader.py  xenios.py
prompts/: agent_onboarding.md
scripts/: audit_check.py  auto_distill.py  auto_setup.py  backfill_kg.py  backfill_sync_log.py  background_review.py  batch_clean_submit.py  batch_distill.py  batch_redistill.py  build_cross_agent_links.py  build_embedding_index.py  clean_kg.py  clean_relations.py  cleanup_duplicate_signals.py  curator.py  dedup_memos.py  distill_all.py  drift_report.py  fix_source_and_link.py  health_check.py  heat_tracker.py  ingest_engine_service.py  init_wiki_state_db.py  learning_system.py  mark_truncated.py  memmaster.py  migrate_db.py  migrate_wiki_filenames.py  push_chat.py  refinement_reminder.py  review_approval.py  review_curator.py  review_reporter.py  tag_cleanup.py  test_distill_e2e.py  wiki_git_auto_commit.sh  wiki_lint.py  wrapper_weekly_report.py
tests/: __init__.py  conftest.py  test_functional.py  test_pipeline.py  test_smoke.py  test_system.py
(+237 files in other folders)
