[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos"
version = "2.0.0-beta.1"
description = "Local AI Agent knowledge capture, distillation, search and action assistance system"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mnemos Contributors"}]
keywords = ["knowledge-management", "ai-agent", "second-brain", "llm", "wiki", "memos", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.0",
    "PyPDF2>=2.0.0",
    "python-docx>=0.8.0",
    "beautifulsoup4>=4.11.0",
    "markdownify>=0.11.0",
    "ebooklib>=0.18.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
kimi = ["tomli_w>=1.0.0"]
ml = ["scikit-learn>=1.3.0", "hnswlib>=0.8.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]
all = ["mcp>=1.0.0", "tomli_w>=1.0.0", "scikit-learn>=1.3.0", "hnswlib>=0.8.0"]

[project.scripts]
mnemos = "mnemos_cli:main"

[project.urls]
Homepage = "https://github.com/jielumaizui/mnemos"
Documentation = "https://github.com/jielumaizui/mnemos/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["core*", "integrations*"]

[tool.setuptools]
py-modules = ["mnemos_cli"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
